--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -1,17 +1,18 @@
-html {
-    position: relative;
-    min-height: 100%;
-}
-
-body {
-    margin-bottom: 60px;
-}
-
 .maindiv {
+    max-width: 70%;
     margin-top: 40px;
     padding-top: 40px;
     padding-bottom: 40px;
     line-height: 200%;
+}
+
+h1, h2, h3, li, p {
+    font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei UI", "Microsoft YaHei", SimHei, simsun, sans-serif;
+}
+
+li, p {
+    font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei UI", "Microsoft YaHei", SimHei, simsun, sans-serif;
+    font-size: 16px;
 }
 
 a:hover {
@@ -27,7 +28,6 @@ a:hover {
 }
 
 footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
+    text-align: center;
+    padding: 30px 0;
 }
