--- a/app/templates/questionnaire_modify_question.html
+++ b/app/templates/questionnaire_modify_question.html
@@ -25,10 +25,10 @@
 					<span class="pull-right btn glyphicon glyphicon-plus" onclick="add_option(this,0)"></span>
           {% endif %}
 				</div>
-			</div>{% if schema[i].type == '0' or schema[i].type == '1' %}<ul class="form-inline">
+			</div>{% if schema[i].type == '0' or schema[i].type == '1' %}<ul class="form-inline" style="list-style-type:none">
 				{% for j in range(0,schema[i].options|length) %}
-				<li onmouseover="show_buttons(this,1)" onmouseout="hide_buttons(this,1)">
-					<input class="form-control" type="text" id="ques_{{i}}.option_{{j}}" name="ques_{{i}}.option_{{j}}" value="{{schema[i].options[j]}}"><div class="pull-right option_button" style="display:none">
+				<li class="row" onmouseover="show_buttons(this,1)" onmouseout="hide_buttons(this,1)">
+					<input class="form-control col-md-7" type="text" id="ques_{{i}}.option_{{j}}" name="ques_{{i}}.option_{{j}}" value="{{schema[i].options[j]}}"><div class="col-md-5 option_button" style="display:none">
 						<span class="btn glyphicon glyphicon-arrow-up" onclick="move_option(this,0)"></span>
 						<span class="btn glyphicon glyphicon-arrow-down" onclick="move_option(this,1)"></span>
 						<span class="btn glyphicon glyphicon-trash" onclick="delete_option(this)"></span>
