--- a/app/templates/questionnaire_preview.html
+++ b/app/templates/questionnaire_preview.html
@@ -8,14 +8,11 @@
 	p[id] {
 		font-size: 16px;
 	}
-	.maindiv {
-		max-width: 70%;
-	}
 </style>
 {% endblock %}
 
 {% block content %}
-<div class="panel panel-default" style="padding: 60px">
+<div class="col-md-10 col-md-offset-1 panel panel-default" style="padding: 60px">
 <h1>[{{subject}}] {{title}}</h1>
 <p id="description">{{description}}</p>
 <hr style="border:0;background-color:#357ebd;height:1px;">
