--- a/app/templates/questionnaire.html
+++ b/app/templates/questionnaire.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container-fluid">
+<div class="container-fluid" style="background-color:#FFFFFF">
     <div class="row">
         <div class="col-md-10 col-md-offset-1">
     <div class="row">
@@ -25,7 +25,7 @@
 
     <br/>
     <div class="row">
-        <div class="col-md-10 col-md-offset-1 panel panel-default">
+        <div class="col-md-10 col-md-offset-1 panel panel-default" style="background-color:rgba(238, 238, 238, 0.31)">
         <div class="panel-body">
         <div class="row">
             <div class="col-md-10">
@@ -67,7 +67,7 @@
 
     
     <div class="row">
-        <div class="col-md-10 col-md-offset-1 panel panel-default">
+        <div class="col-md-10 col-md-offset-1 panel panel-default" style="background-color:rgba(238, 238, 238, 0.31)">
         <div class="panel-body">
         <div class="col-md-8">
         <dl class="dl-horizontal">
