--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -6,6 +6,7 @@ html {
 body {
     margin-bottom: 60px;
     font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei UI", "Microsoft YaHei", SimHei, simsun, sans-serif;
+    background: url(/static/img/plask_back_pic.jpg);
 }
 
 .maindiv {
