--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,7 +30,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/" style="font-size:24px;color: white">Plask</a>
+            <a class="navbar-brand" href="/" style="font-size:24px;color: white"><img src="/static/img/plask_ico.png" width="50%" height="150%" style="margin-top: -10px"/></a>
+    <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}">
         </div>
 
         <div class="navbar-collapse collapse">
