--- a/app/templates/workflow.html
+++ b/app/templates/workflow.html
@@ -6,15 +6,19 @@
 {% endblock %}
 
 {% block content %}
+
       <div class="container-fluid">
         <div class="row">
           <div class="col-sm-3 col-md-2 sidebar">
-            <ul class="nav nav-sidebar">
-              <li>
-                <p>Step1: Basic Information</p>
+            <ul class="list-group" style="margin-top:32px;line-height:15px;">
+              <li class="list-group-item">
+                <b style="font-family:Menlo;font-size:18px;line-height:30px">Step Tips:</b>
               </li>
-              <li>
-                <p>Step2: Add Questions</p>
+              <li id="sidebarli1" class = "list-group-item active">
+                <p>1: Basic Information</p>
+              </li>
+              <li id="sidebarli2" class = "list-group-item" style="">
+                <p>2: Add Questions</p>
               </li>
             </ul>
         </div>
