--- a/app/templates/questionnaire_create_question.html
+++ b/app/templates/questionnaire_create_question.html
@@ -1,13 +1,13 @@
 {% extends "workflow.html" %}
 
 {% block content_step %}
-  <h1 class="page-header">Step 2/2 : Add Questions</h1>
+  <h1 class="page-header" style="color:#FFFFFF">Step 2/2 : Add Questions</h1>
 
   <div class="col-sm-9 col-md-10">
     <form method="POST">
       <div id="ques_list">
       </div>
-      <button class="btn btn-primary" type="submit">Submit</button>
+      <button class="btn btn-default" type="submit">Submit</button>
     </form>
   </div>
 
