--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,7 +18,7 @@
     <script type="text/javascript" src="{{ url_for('static', filename='js/base.js') }}"></script>
     {% block head %}{% endblock %}
 </head>
-<body style="background-color:rgba(111, 84, 153, 0.92)">
+<body>
 <!-- navbar -->
 <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
