--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,14 +2,14 @@
 
 {% block content %}
 <div class="col-md-offset-4">
-<h1>Login</h1>
+<h1 style="color:#FFFFFF">Login</h1>
 <br/>
 
 <form method="post">
 	{{form.hidden_tag()}}
 
     <div class="form-group row">
-        <label for="username" class="control-label col-md-2">{{form.username.label}}</label>
+        <label for="username" class="control-label col-md-2" style="color:#FFFFFF">{{form.username.label}}</label>
         <div class="col-md-4">
         	{{form.username(class_='form-control')}}
         </div>
@@ -17,7 +17,7 @@
 		
 		
 	<div class="form-group row">
-        <label for="password" class="control-label col-md-2">{{form.password.label}}</label>
+        <label for="password" class="control-label col-md-2" style="color:#FFFFFF">{{form.password.label}}</label>
         <div class="col-md-4">
         	{{form.password(class_='form-control')}}
         </div>
@@ -25,7 +25,7 @@
 
 	<div class="form-group row">
         <div class="col-md-offset-2 col-md-4">
-            <button type="submit" class="btn btn-primary">Login
+            <button type="submit" class="btn btn-default">Login
             </button>
         </div>
     </div>
