--- a/app/templates/questionnaire_create.html
+++ b/app/templates/questionnaire_create.html
@@ -1,31 +1,33 @@
 {% extends "workflow.html" %}
 
 {% block content_step %}
-	<h1 class="page-header">Step 1/2 : Basic Information</h1>
+<div class="col-md-10 col-md-offset-1">
+	<h1 class="page-header" style="color:#FFFFFF">Step 1/2 : Basic Information</h1>
 	<form action="" method="post" class="form-horizontal">
 		<div class="form-group">
-			<label for="title" class="control-label col-md-2">Title</label>
+			<label for="title" class="control-label col-md-2" style="color:#FFFFFF">Title</label>
 			<div class="col-md-5">
 				<input class="form-control" id="title" name="title" type="text" required/>
 			</div>
 		</div>
 		<div class="form-group">
-			<label for="subject" class="control-label col-md-2">Subject</label>
+			<label for="subject" class="control-label col-md-2" style="color:#FFFFFF">Subject</label>
 			<div class="col-md-5">
 				<input class="form-control" id="subject" name="subject" type="text" required/>
 			</div>
 		</div>
 		<div class="form-group">
-			<label for="description" class="control-label col-md-2">Description</label>
+			<label for="description" class="control-label col-md-2" style="color:#FFFFFF">Description</label>
 			<div class="col-md-5">
 				<textarea rows="8" class="form-control" id="description" name="description" required></textarea>
 			</div>
 		</div>
 		<div class="form-group row">
 	        <div class="col-md-offset-2 col-md-5">
-	            <button class="btn btn-primary" type="submit">Create
+	            <button class="btn btn-default" type="submit">Create
 	            </button>
 	        </div>
     	</div>
 	</form>
+</div>
 {% endblock %}
