--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -2,14 +2,14 @@
 
 {% block content %}
 <div class="col-md-offset-3">
-<h1>Register</h1>
+<h1 style="color:#FFFFFF">Register</h1>
 <br/>
 
 <form method="post">
 	{{form.hidden_tag()}}
 
     <div class="form-group row">
-        <label for="username" class="control-label col-md-3">{{form.username.label}}</label>
+        <label for="username" class="control-label col-md-3" style="color:#FFFFFF">{{form.username.label}}</label>
         <div class="col-md-4">
         	{{form.username(class_='form-control')}}
         </div>
@@ -17,21 +17,21 @@
 		
 		
 	<div class="form-group row">
-        <label for="password" class="control-label col-md-3">{{form.password.label}}</label>
+        <label for="password" class="control-label col-md-3" style="color:#FFFFFF">{{form.password.label}}</label>
         <div class="col-md-4">
         	{{form.password(class_='form-control')}}
         </div>
     </div>
 
 	<div class="form-group row">
-        <label for="password_again" class="control-label col-md-3">{{form.password_again.label}}</label>
+        <label for="password_again" class="control-label col-md-3" style="color:#FFFFFF">{{form.password_again.label}}</label>
         <div class="col-md-4">
         	{{form.password_again(class_='form-control')}}
         </div>
     </div>
 
 	<div class="form-group row">
-        <label for="mail" class="control-label col-md-3">{{form.mail.label}}</label>
+        <label for="mail" class="control-label col-md-3" style="color:#FFFFFF">{{form.mail.label}}</label>
         <div class="col-md-4">
         	{{form.mail(class_='form-control')}}
         </div>
@@ -39,7 +39,7 @@
 
     <div class="form-group row">
         <div class="col-md-offset-3 col-md-4">
-            <button class="btn btn-primary" type="submit">Register
+            <button class="btn btn-default" type="submit">Register
             </button>
         </div>
     </div>
