--- a/app/templates/release.html
+++ b/app/templates/release.html
@@ -9,15 +9,15 @@
 
 
 {% block content %}
-
+<div class="container-fluid">
 <div class="col-md-10 col-md-offset-1">
 
-<h1>Release</h1>
+<h1 style="color:#FFFFFF">Release</h1>
 <br/>
 
 <form action="" method="post" name="release">
     <div class="form-group row">
-        <label for="start_time" class="control-label col-md-3">Start time</label>
+        <label for="start_time" class="control-label col-md-3" style="color:#FFFFFF">Start time</label>
         <div class="col-md-5">
             <div class="input-group date form_datetime" data-date-format="yyyy-mm-dd hh:ii:ss">
                 <input type="text" class="form-control"
@@ -29,7 +29,7 @@
     </div>
 
     <div class="form-group row">
-        <label for="end_time" class="control-label col-md-3">End time</label>
+        <label for="end_time" class="control-label col-md-3" style="color:#FFFFFF">End time</label>
         <div class="col-md-5">
             <div class="input-group date form_datetime" data-date-format="yyyy-mm-dd hh:ii:ss">
                 <input type="text" class="form-control"
@@ -41,28 +41,28 @@
     </div>
 
     <div class="form-group row">
-        <label for="is_allow_anonymous" class="control-label col-md-3">Allow anonymous</label>
+        <label for="is_allow_anonymous" class="control-label col-md-3" style="color:#FFFFFF">Allow anonymous</label>
         <div class="col-md-5">
             <input type="checkbox" id="is_allow_anonymous" name="is_allow_anonymous" checked>
         </div>
     </div>
 
     <div class="form-group row">
-        <label for="limit_num_participants" class="control-label col-md-3">Limit number of deliveries for each participant</label>
+        <label for="limit_num_participants" class="control-label col-md-3" style="color:#FFFFFF">Limit number of deliveries for each participant</label>
         <div class="col-md-5">
             <input type="text" class="form-control" id="limit_num_participants" name="limit_num_participants" placeholder="Leave blank if no limits">
         </div>
     </div>
 
     <div class="form-group row">
-        <label for="limit_num_ip" class="control-label col-md-3">Limit number of deliveries for IP address</label>
+        <label for="limit_num_ip" class="control-label col-md-3" style="color:#FFFFFF">Limit number of deliveries for IP address</label>
         <div class="col-md-5">
             <input type="text" class="form-control" id="limit_num_ip" name="limit_num_ip" placeholder="Leave blank if no limits">
         </div>
     </div>
 
     <div class="form-group row">
-        <label for="special_participants" class="control-label col-md-3">Special_participants</label>
+        <label for="special_participants" class="control-label col-md-3" style="color:#FFFFFF">Special_participants</label>
         <div class="col-md-5">
             <textarea rows="8" class="form-control" id="special_participants" name="special_participants" placeholder="Enter username split by comma"></textarea>
         </div>
@@ -70,11 +70,12 @@
 
     <div class="form-group row">
         <div class="col-md-offset-3 col-md-5">
-            <button class="btn btn-primary" type="submit">Release
+            <button class="btn btn-default" type="submit">Release
             </button>
         </div>
     </div>
 </form>
+</div>
 </div>
 
 <script type="text/javascript">
