--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -3,6 +3,8 @@
 {% block content %}
 <script type="text/javascript" src="{{ url_for('static', filename='js/js/new_questionnaire.js') }}"></script>
 
+<div class="container-fluid" style="background-color:#FFFFFF">
+<div class="col-md-10 col-md-offset-1">
 <div class="col-md-1">
   <div id="plask-sidebar" class="plask-sidebar hidden-print hidden-xs hidden-sm">
     <ul class="nav plask-sidenav">
@@ -21,7 +23,7 @@
 	<form method="POST">
 
     {% if g.user == user %}
-        <h3>Welcome, {{user.username}} <a class="btn btn-primary btn-m pull-right" role="button" href="{{url_for('create')}}">Create Questionnaire</a></h3>
+        <h3 style="margin-top:25px">Welcome, {{user.username}} <a class="btn btn-primary btn-m pull-right" role="button" href="{{url_for('create')}}" style="margin-top:-5px">Create Questionnaire</a></h3>
     {% else %}
         <h3>{{user.username}}({{user.mail}})</h3>
     {% endif %}
@@ -37,16 +39,15 @@
 			<thead>
 			<tr class="thead_td" class="row fluid">
 
-			<td  class="sequence" id="proj_title"><h4>Title</h4></td>
-			<td  class="sequence" id="proj_created"><h4>Create Time</h4></td>
+			<td  class="sequence" id="proj_title"><h5>Title</h5></td>
 
-			<td  class="sequenceup" id="proj_start"><h4>Start Time</h4></td>
-			<td  class="sequenceup" id="proj_end"><h4>End Time</h4></td>
+			<td  class="sequenceup" id="proj_start"><h5>Start Time</h5></td>
+			<td  class="sequenceup" id="proj_end"><h5>End Time</h5></td>
 
 
-			<td ><h4>Status</h4></td>
-			<td  class="alignc"><h4>Replies</h4></td>
-			<td ><h4>Information</h4></td>
+			<td ><h5>Status</h5></td>
+			<td  class="alignc"><h5>Replies</h5></td>
+			<td ><h5>Information</h5></td>
 			</tr>
 			</thead>
 
@@ -64,7 +65,6 @@
 
 			</span>
 			</td>
-			<td>{{ques_list_created[i].create_time.strftime("%Y-%m-%d %H:%M")}}</td>
 			<td>{{ques_list_releases[i].start_time.strftime("%Y-%m-%d %H:%M") if ques_list_releases[i] else "Not yet"}}</td>
 			<td>{{ques_list_releases[i].end_time.strftime("%Y-%m-%d %H:%M") if ques_list_releases[i] else "Not yet"}}</td>
 			<td>
@@ -93,13 +93,13 @@
 			<thead>
 			<tr class="row fluid">
 
-			<td  class="col-md-4" id="proj_title"><h4>Title</h4></td>
+			<td  class="col-md-4" id="proj_title"><h5>Title</h5></td>
 
-			<td  class="col-md-4" id="proj_updated"><h4>Last Answer</h4></td>
+			<td  class="col-md-4" id="proj_updated"><h5>Last Answer</h5></td>
 
 
-			<td  class="col-md-4"><h4>Status</h4></td>
-			<td  class="col-md-4"><h4>Information</h4></td>
+			<td  class="col-md-4"><h5>Status</h5></td>
+			<td  class="col-md-4"><h5>Information</h5></td>
 			</tr>
 			</thead>
 			<tbody val="ttt">
@@ -128,6 +128,8 @@
 	</div>
 	</form>
 
+</div>
+</div>
 </div>
 {% endblock %}
 
