--- a/app/templates/questionnaire_modify_question.html
+++ b/app/templates/questionnaire_modify_question.html
@@ -77,8 +77,8 @@ $(document).ready(function(){
   </form>
 </div>
 
-  <div class="col-sm-3 col-md-2 sidebar-right">
-    <ul class="nav nav-stacked" style="margin-top:30px">
+  <div class="col-sm-3 col-md-2 sidebar-right" style="background:none">
+    <ul class="nav nav-stacked" style="">
       <li>
         <button class="btn btn-default btn-block" onclick="add_question(0)">Single Choice</button>
       </li>
