--- a/app/templates/questionnaire_create_question.html
+++ b/app/templates/questionnaire_create_question.html
@@ -17,19 +17,19 @@ $(document).ready(function(){
     </form>
   </div>
 
-  <div class="col-sm-3 col-md-2 sidebar-right">
+ <div class="col-sm-3 col-md-2 sidebar-right" style="background:none;margin-top:100px">
     <ul class="nav nav-stacked">
       <li>
-        <button class="btn btn-default" onclick="add_question(0)">Single Choice</button>
+        <button class="btn btn-default btn-block" onclick="add_question(0)">Single Choice</button>
       </li>
       <li>
-        <button class="btn btn-default" onclick="add_question(1)">Multiple Choice</button>
+        <button class="btn btn-default btn-block" onclick="add_question(1)">Multiple Choice</button>
       </li>
       <li>
-      <button class="btn btn-default" onclick="add_question(2)">True or False</button>
+      <button class="btn btn-default btn-block" onclick="add_question(2)">True or False</button>
       </li>
       <li>
-        <button class="btn btn-default" onclick="add_question(3)">Essay</button>
+        <button class="btn btn-default btn-block" onclick="add_question(3)">Essay</button>
       </li>
     </ul>
   </div>
