--- a/app/templates/workflow.html
+++ b/app/templates/workflow.html
@@ -6,11 +6,10 @@
 {% endblock %}
 
 {% block content %}
-
       <div class="container-fluid">
         <div class="row">
-          <div class="col-sm-3 col-md-2 sidebar" style="background:none; ">
-            <ul class="list-group" style="margin-top:32px;line-height:15px;position:relative">
+          <div class="col-sm-3 col-md-2 sidebar" style="background:none;margin-top:100px">
+            <ul class="list-group" style="line-height:15px">
               <li class="list-group-item">
                 <b style="font-family:Menlo;font-size:18px;line-height:30px">Step Tips:</b>
               </li>
@@ -22,7 +21,7 @@
               </li>
             </ul>
         </div>
-        <div class="col-sm-9  col-md-10  main">
+        <div class="col-sm-9 col-sm-offset-3 col-md-9 col-md-offset-2 main">
           {% block content_step %}{% endblock %}
         </div>
       </div>
