--- a/app/templates/questionnaire_modify_question.html
+++ b/app/templates/questionnaire_modify_question.html
@@ -11,7 +11,7 @@ $(document).ready(function(){
 });
 </script>
 
-  <h1 class="page-header">Step 2/2 : Add Questions</h1>
+  <h1 class="page-header" style="color:#FFFFFF">Step 2/2 : Add Questions</h1>
   
 <div class="col-sm-9 col-md-10">
   <form method="POST">
