--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -58,7 +58,7 @@
 
           <div class="mastfoot">
             <div class="inner">
-              <p>&copy; 2014 Plask</p>
+              <p>Copyright &copy; 2014 Plask</p>
     
 	</div>
           </div>
