--- a/app/templates/release_success.html
+++ b/app/templates/release_success.html
@@ -12,8 +12,10 @@
 	}
 </script>
 
-<p>URL: <a id="Url_Change" href="http://192.168.43.164:5000/questionnaire/{{q_id}}/fill">http://192.168.43.164:5000/questionnaire/{{q_id}}/fill</a></p>
-	
+<p style="color:white;font-size:16px">URL: <a id="Url_Change" href=""></a></p>
+
+<br/>
+
 <a class="btn btn-default" href="{{url_for('questionnaire', questionnaire_id=q_id)}}">Questionnaire Dashboard</a>
 
 {% endblock %}
