--- a/app/static/css/sidebar.css
+++ b/app/static/css/sidebar.css
@@ -10,23 +10,23 @@
     padding: 4px 20px;
     font-size: 14px;
     font-weight: 500;
-    color: #999
+    color: white;
 }
 
 .plask-sidebar .nav > li > a:hover, .plask-sidebar .nav > li > a:focus {
     padding-left: 19px;
-    color: #000;
+    color: white;
     text-decoration: none;
     background-color: transparent;
-    border-left: 1px solid #000
+    border-left: 1px solid white
 }
 
 .plask-sidebar .nav > .active > a, .plask-sidebar .nav > .active:hover > a, .plask-sidebar .nav > .active:focus > a {
     padding-left: 18px;
     font-weight: 700;
-    color: #000;
+    color: white;
     background-color: transparent;
-    border-left: 2px solid #000
+    border-left: 2px solid white
 }
 
 .plask-sidebar .nav .nav {
