fix modify question

--- a/app/templates/questionnaire_modify_question.html
+++ b/app/templates/questionnaire_modify_question.html
@@ -25,7 +25,7 @@ $(document).ready(function(){
 				  <b>Single Choice</b>
 				  {% elif schema[i].type=='1' %}
 				  <b>Multiple Choice</b>
-				  {% elif shema[i].type=='2' %}
+				  {% elif schema[i].type=='2' %}
 				  <b>True or False </b>
 				  {% else %}
 				  <b>Essay</b>
