fix modify questions

--- a/app/templates/questionnaire_modify_question.html
+++ b/app/templates/questionnaire_modify_question.html
@@ -38,18 +38,8 @@ $(document).ready(function(){
 
 
 
-        </div><!-- 
-        		<div class="col-md-3">
-				  {% if schema[i].type=='0' %}
-				  <p>Single</p>
-				  {% elif schema[i].type=='1' %}
-				  <p>Multi </p>
-				  {% elif shema[i].type=='2' %}
-				  <p>T/F </p>
-				  {% else %}
-				  <p>Essay</p>
-				  {% endif %}
-				 </div> -->
+        </div>
+        
 				<div class="ques_button" style="display:none">
 					<span class="pull-right btn glyphicon glyphicon-trash" onclick="delete_question(this)"></span>
 					<span class="pull-right btn glyphicon glyphicon glyphicon-arrow-down" onclick="move_question(this,1)"></span>
